<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/OutfitsBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:text="@string/OutfitsBtn"/>

        <TextView
            android:id="@+id/MainLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/Closet_headline" />

        <Button
            android:id="@+id/AddClothesBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:text="@string/AddClothesBtn"/>


    </LinearLayout>

    <TextView
        android:id="@+id/TodayStyleLbl"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linearLayout"
        android:layout_marginTop="70dp"
        android:textAlignment="center"
        android:text="@string/Under_construction"/>

</RelativeLayout>
