<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">


    <TextView
        android:id="@+id/MainLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/Under_construction" />

    <TextView
        android:id="@+id/subHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Outfits_sub_headline"
        android:layout_below="@id/MainLbl"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/CreateOutfitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateOutfitBtn"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp" />




</RelativeLayout>
